kubectl_deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hmpps-product-portfolio
spec:
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
    type: RollingUpdate
  selector:
    matchLabels:
      app: hmpps-product-portfolio
  replicas: 2
  template:
    metadata:
      labels:
        app: hmpps-product-portfolio
    spec:
      containers:
      - name: hmpps-product-portfolio
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/hmpps-product-portfolio/hmpps-product-portfolio:latest
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
