kubectl_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hmpps-product-portfolio-service
  labels:
    app: hmpps-product-portfolio-service
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: hmpps-product-portfolio
